完成初始值sqlite,实时监控控件添加中

--- a/代码1-Bridge_485/Bridge_485.rc
+++ b/代码1-Bridge_485/Bridge_485.rc
@@ -277,33 +277,47 @@ BEGIN
     PUSHBUTTON      "关闭文件",IDC_CLOSE_HIST,235,237,50,14
 END
 
-IDD_CUR_DATA_DIALOG DIALOG DISCARDABLE  0, 0, 361, 164
+IDD_CUR_DATA_DIALOG DIALOG DISCARDABLE  0, 0, 399, 270
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "实时监测数据"
 FONT 10, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,304,126,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,304,143,50,14
-    PUSHBUTTON      "测试MSG",IDC_BUTTON_TESTMSG,199,137,45,20
+    DEFPUSHBUTTON   "OK",IDOK,342,126,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,342,249,50,14
+    PUSHBUTTON      "测试MSG",IDC_BUTTON_TESTMSG,347,92,45,20
+    CONTROL         "",IDC_CHART,"Static",SS_BLACKRECT,7,7,310,256
 END
 
-IDD_SENSOR_INIT_VAL DIALOG DISCARDABLE  0, 0, 139, 127
+IDD_SENSOR_INIT_VAL DIALOG DISCARDABLE  0, 0, 237, 139
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "感应器初始值设置"
-FONT 12, "宋体"
+FONT 11, "宋体"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,7,106,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,73,106,50,14
-    LTEXT           "预压50%",IDC_STATIC,28,9,31,12
-    LTEXT           "预压80%",IDC_STATIC,28,28,31,12
-    LTEXT           "预压100%",IDC_STATIC,25,46,33,12
-    LTEXT           "施工第1次浇筑",IDC_STATIC,7,64,55,12
-    LTEXT           "施工第2次浇筑",IDC_STATIC,7,83,55,12
-    EDITTEXT        IDC_YY1INITVAL,62,7,45,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_YY2INITVAL,62,27,45,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_YY3INITVAL,62,45,45,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SG1INITVAL,62,61,45,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_SG2INITVAL,62,81,45,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "保存",IDOK,29,117,50,14
+    PUSHBUTTON      "关闭",IDCANCEL,130,118,50,14
+    EDITTEXT        IDC_YY1INITVAL,164,13,45,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    EDITTEXT        IDC_YY2INITVAL,164,33,45,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    EDITTEXT        IDC_YY3INITVAL,164,51,45,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    EDITTEXT        IDC_SG1INITVAL,164,67,45,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    EDITTEXT        IDC_SG2INITVAL,164,87,45,14,ES_AUTOHSCROLL | NOT 
+                    WS_VISIBLE
+    CONTROL         "",IDC_GRID_RECT,"Static",SS_BLACKFRAME,92,27,131,69
+    GROUPBOX        "预压与施工阶段",IDC_STATIC,7,15,75,93
+    GROUPBOX        "传感器初始值设置",IDC_STATIC,87,15,143,92
+    CONTROL         "预压50%",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON,13,25,
+                    43,10
+    CONTROL         "预压80%",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,13,41,
+                    43,10
+    CONTROL         "预压100%",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,13,57,
+                    47,10
+    CONTROL         "施工第1次浇筑",IDC_RADIO4,"Button",BS_AUTORADIOBUTTON,
+                    13,73,65,10
+    CONTROL         "施工第2次浇筑",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,
+                    13,89,65,10
 END
 
 
@@ -449,18 +463,18 @@ BEGIN
     IDD_CUR_DATA_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 354
+        RIGHTMARGIN, 392
         TOPMARGIN, 7
-        BOTTOMMARGIN, 157
+        BOTTOMMARGIN, 263
     END
 
     IDD_SENSOR_INIT_VAL, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 132
+        RIGHTMARGIN, 230
         VERTGUIDE, 62
         TOPMARGIN, 7
-        BOTTOMMARGIN, 120
+        BOTTOMMARGIN, 132
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -482,17 +496,17 @@ BEGIN
     BEGIN
         MENUITEM "预压与施工阶段选择",          MENU_SG_STEP
         MENUITEM "传感器报警值",                MENU_WARNING_PARA
+        MENUITEM "传感器初始值",                IDD_INIT_VAL
         MENUITEM "报警功能验证",                IDD_WARNING_TEST
-        MENUITEM "无线发送数据测试",            IDD_TEST_WIRELESS_DATA
-        MENUITEM "提取电话号码和命令代码",      IDD_GET_PHONE_NUM
     END
     POPUP "串行口参数设置"
     BEGIN
         MENUITEM "无线通讯口参数",              ID1_232_CFG
         MENUITEM "打开无线串行口",              IDD_OPEN_S232
-        MENUITEM "数据测量通讯口参数",          IDD2_485_CFG
         MENUITEM "打开测量串行口",              IDD_OPEN_S485
-        MENUITEM "传感器初始值",                IDD_INIT_VAL
+        MENUITEM "无线发送数据测试",            IDD_TEST_WIRELESS_DATA
+        MENUITEM "数据测量通讯口参数",          IDD2_485_CFG
+        MENUITEM "提取电话号码和命令代码",      IDD_GET_PHONE_NUM
     END
     MENUITEM "测量节点配置",                NODE_CONFIG
     MENUITEM "监理人员信息",                WARNING_CONFIG
